test/language/spec/stdlib/valid/bool_type.topo
// Stdlib bridging type — bool (Plan 38 Batch 1)
// Tests: stdlib scalar with arity 0; usable as return and parameter type.

namespace app {
  public:
    bool isReady();
    bool isPositive(bool flag);
}
