test/language/spec/stdlib/invalid/optional_missing_t.topo
// TEST: optional<> with no type parameter
// EXPECT-ERROR: stdlib type 'optional' takes 1 type parameter

namespace bad {
  public:
    optional<> badReturn();
}
